# TerminalTranslator

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: Findcpr.cmake
src/: main.cc
test/: test_cpr.cc  test_spin.cc
